--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,3 +21,20 @@ body {
   box-shadow: 0 20px 40px rgba(0,0,0,0.15);
 }
 
+
+.app-header {
+  text-align: center;
+  color: #4a90e2;
+  position: relative;
+}
+
+
+
+
+.add-task {
+  display: flex;
+  background: #bcdff1;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 20px;
+}
